# todder

./: .coveragerc  .flake8  .gitattributes  .gitignore  LICENSE  __init__.py  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  testing.yml
.ipynb_checkpoints/: __init__-checkpoint.py
act/: __init__.py
docs/source/: conf.py  index.rst  installation.rst  release-history.rst
todder/: __init__.py  signal.py  tod.py  utils.py
todder/act/: della.py
todder/coords/: __init__.py  transforms.py
todder/instruments/: __init__.py
todder/instruments/act/: __init__.py  della.py
todder/instruments/atlast/: __init__.py
todder/instruments/mustang2/: __init__.py
todder/sim/: __init__.py  noise.py
todder/tests/: test_tod.py
