[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools_scm"]
build-backend = "hatchling.build"

[project]
name = "todder"
description = "Beamline optimization with machine learning"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
  { name = "Thomas W. Morris", email = "thomas.w.morris@yale.edu" }
]
maintainers = [
  { name = "Thomas W. Morris", email = "thomas.w.morris@yale.edu" }
]
requires-python = ">=3.9"

dependencies = [
    "astropy",
    "dask",
    "h5py",
    "healpy",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]

dynamic = ["version"]

[project.optional-dependencies]

dev = [
    "black",
    "pytest-codecov",
    "coverage",
    "flake8",
    "furo",
    "isort",
    "nbstripout",
    "pre-commit",
    "pre-commit-hooks",
    "pytest",
    "sphinx",
    "twine",
    "ipython",
    "jupyter",
    "matplotlib",
    "nbsphinx",
    "numpydoc",
    "pandoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/thomaswmorris/todder"
"Bug Reports" = "https://github.com/thomaswmorris/todder/issues"


[tool.setuptools_scm]
version_file = "todder/_version.py"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "todder/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.black]
line-length = 125
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
